feat: fix collectors